<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5sp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logoname" />

        <TextView
            android:id="@+id/txtETitle"
            android:layout_width="398dp"
            android:layout_height="77dp"
            android:background="#00009688"
            android:gravity="center"
            android:text="@string/txtETitle"
            android:textAlignment="gravity"
            android:textColor="@color/purple_500"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txtEHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/txtEHeight" />

        <EditText
            android:id="@+id/estHeight"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:gravity="right"
            android:inputType="number"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/txtEWidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/txtEWidth" />

        <EditText
            android:id="@+id/estWidth"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/txtDepth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/txtDepth" />

        <EditText
            android:id="@+id/estDepth"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/txtEWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/txtEWeight" />

        <EditText
            android:id="@+id/estWeight"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="textEnd" />

        <Button
            android:id="@+id/btnCalculateEstimate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnECalculate" />

        <TextView
            android:id="@+id/txtStandard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtStandard" />

        <TextView
            android:id="@+id/txtEstimateResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/txtPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtPriority" />

        <TextView
            android:id="@+id/txtPrioityResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/txtOvernight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtOvernight" />

        <TextView
            android:id="@+id/txtOvernightResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd" />

    </LinearLayout>
</ScrollView>