<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ToolBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/design_default_color_primary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/order_location"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />






    </LinearLayout>

    <TextView
        android:id="@+id/txtEstimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txtEstimate"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ToolBarLayout" />

    <TextView
        android:id="@+id/txtTrackNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txtTrackNum"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ToolBarLayout" />

    <TextView
        android:id="@+id/estimateDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/estimateDate"
        android:textColor="#040303"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEstimate" />

    <TextView
        android:id="@+id/trackNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/trackNum"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTrackNum" />

    <View
        android:id="@+id/view"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/shape_remaining"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgOrderShiped" />

    <ImageView
        android:id="@+id/imgOrderShiped"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/estimateDate"
        app:srcCompat="@drawable/icon_package1" />

    <TextView
        android:id="@+id/txtShipped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txtShipped"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toEndOf="@+id/imgOrderShiped"
        app:layout_constraintTop_toBottomOf="@+id/trackNum" />

    <TextView
        android:id="@+id/origin"
        android:layout_width="218dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtShippedPlace"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toEndOf="@+id/imgOrderShiped"
        app:layout_constraintTop_toBottomOf="@+id/txtShipped" />

    <View
        android:id="@+id/view2"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/shape_remaining"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgOut" />

    <ImageView
        android:id="@+id/imgOut"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/imgOrderShiped"
        app:srcCompat="@drawable/icon_package1" />

    <TextView
        android:id="@+id/txtOrderOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/txtOrderOut"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toEndOf="@+id/imgOut"
        app:layout_constraintTop_toBottomOf="@+id/origin" />

    <TextView
        android:id="@+id/dcCenter"
        android:layout_width="256dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtOutPlace"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/imgOut"
        app:layout_constraintTop_toBottomOf="@+id/txtOrderOut" />

    <View
        android:id="@+id/line1"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/remaining"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view3"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/shape_remaining"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgDelivered" />

    <ImageView
        android:id="@+id/imgDelivered"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/imgOut"
        app:srcCompat="@drawable/icons_package2" />

    <TextView
        android:id="@+id/txtDelivered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/txtDelivered"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toEndOf="@+id/imgDelivered"
        app:layout_constraintTop_toBottomOf="@+id/dcCenter" />


    <TextView
        android:id="@+id/destination"
        android:layout_width="235dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtDeliveredDate"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toEndOf="@+id/imgDelivered"
        app:layout_constraintTop_toBottomOf="@+id/txtDelivered" />

    <View
        android:id="@+id/line2"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/remaining"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

</androidx.constraintlayout.widget.ConstraintLayout>